<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutoring Manager</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Student activity -->
    <string name="student">Student</string>
    <string name="students">Students</string>
    <string name="problemsSavingStudent">It is not possible to save student.</string>
    <string name="validationSavingStudent">Student name and school are mandatory</string>
    <string name="studentSaved">Student saved</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="school">School</string>
    <string name="saveStudent">Save student</string>
    <string name="newerStudent">New student</string>

    <!-- Lesson activity -->
    <string name="lesson">Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="newerLesson">New lesson</string>
    <string name="saveLesson">Save lesson</string>
    <string name="paid">Paid</string>
    <string name="problemsSavingLesson">It is not possible to save lesson.</string>
    <string name="lessonSaved">Lesson saved</string>
    <string name="noStudentsAvailable">There are no available students</string>
    <string name="studentNotAvailable">Student not available</string>

</resources>
