<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bolowrc.tutoringmanager.activity.StudentActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:id="@+id/firstNameInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:id="@+id/lastNameInput" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/school"
        android:id="@+id/schoolInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveStudent"
        android:id="@+id/saveStudentBtn"
        android:onClick="saveStudent" />


</LinearLayout>