<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bolowrc.tutoringmanager.activity.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lessons"
            android:id="@+id/lessonsBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="toLessons"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/students"
            android:id="@+id/studentsBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="toStudents"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:id="@+id/statisticsBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="toStatistics"/>

    </LinearLayout>

</RelativeLayout>
